--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
             <div class="flex-grow-1 text-center">
                 <button type="submit" class="btn" py-click="nanamigreen" style="background-color: #3366CC; color: rgb(255, 255, 255);">
-                    Submit Order
+                    Submit
                 </button>
             </div>
 
@@ -134,4 +134,5 @@
     </div>
     
 </body>
+
 </html>
